- The Push laser now fires straight at the crosshair, rather than 8 units underneath.
- A drawing utensil has been implemented as an extra key for the people who think of Push as a multiplayer MSPaint simulator.
- The F1 help screen is no longer the best but now is much more informative.
- The Doom pistol is now removed from the player on map enter.


MAPS:
- Absolutely nothing about Push28 was changed.
- The teleporters on Push11 have been lowered and their textures changed, for easier jumping-into and location differentiation.
- Push33's amount of actors has been dramatically cut down to a third of what it was, and filesize was reduced from over three megabytes to barely 1.6. This should help make the map less laggy.
- Push27 has been expanded and the center arena filled in. This should make the arena more difficult to recover from, and slightly more difficult to get knocked off.
- The center platform in PUSH04 has been raised so people can react easier to trips. The outer ring has been expanded so one simple nudge doesn't throw people off, but has lowered so getting thrown off requires more reaction.
- PUSH35's main arena was made smaller, and the walls stretched further out. It should be easier to knock people off now.
- PUSH36 has been dramatically ensmallened and now can actually be recovered from.
- PUSH36 now has a defined ground texture.
- PUSH17 has smaller walls to make it easier to recover and a few floating platforms for a little bit of Z-axis action.
- PUSH30 has had the laggy pyramids removed, and many many more spawn points placed throughout the area.
- PUSH34's silos have been expanded for more safe ground.
- PUSH32's pillars now have black edges.
- PUSH32's floor texture now has a noise filter for easier identification.
- Several floating platforms on PUSH10 were removed and the buildings moved in closer, for a tighter arena.
- The killfloor on PUSH10 has been brought up quite a bit for easier recovery.