@@ -12,6 +12,7 @@ GAMEPLAY:
 - A drawing utensil has been implemented as an extra key for the people who think of Push as a multiplayer MSPaint simulator.
 - The F1 help screen is no longer the best but now is much more informative.
 - The Doom pistol is now removed from the player on map enter.
+- Deathmatch support has been implemented. It's a little wonky and isn't perfect until the engine can track who pushed who off, but it's a decent little timewaster in the meantime.
 
 
 MAPS:
